[project]
name = "clientcentral"
version = "12.5.7"
description = "Client Central Python API."
authors = [{ name = "Thomas Scholtz", email = "thomas@labs.epiuse.com" }]
readme = "README.md" 
keywords = ["ClientCentral", "Client", "EPI-USE Labs", "EPI-USE", "Client-Central"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
]
license = { file = "LICENSE" }  
dependencies = [
    "beautifulsoup4>=4.12.3",
    "aiohttp==3.9.3",
    "ujson>=5.9.0",
]

[project.urls]
Homepage = "https://github.com/EPI-USE-Labs/client-central-python-api"

[tool]
[tool.commitizen]
name = "cz_conventional_commits"
update_changelog_on_bump = true
bump_message = "bump: release $current_version to $new_version [skip-ci]"
version = "12.5.7"
tag_format = "v$version"
version_files = [
    "README.md",
    "pyproject.toml",
]